# Conveyor-belt-

./: README.md
b/include/: antenna.hpp  data.hpp  dataAllocator.hpp  dataReader.hpp  tag.hpp  tagChecker.hpp
b/src/: antenna.cpp  dataAllocator.cpp  dataReader.cpp  tag.cpp  tagChecker.cpp
b/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readerSimulator.cpp  readerSimulator.hpp  test  test.cpp
